After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 644581 - file open error in updates plugin
file open error in updates plugin
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: plugins
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2011-03-12 17:56 UTC by Adam Dingle
Modified: 2011-03-12 22:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.00 KB, patch)
2011-03-12 17:57 UTC, Adam Dingle
none Details | Review

Description Adam Dingle 2011-03-12 17:56:56 UTC
When gnome-settings-daemon starts up, it issues this warning:

** (gnome-settings-daemon:17201): WARNING **: Unable to start updates manager: Error opening file: No such file or directory

The problem is that the update manager plugin is looking for the wrong filename when reading DBus introspection information.  Patch attached.
Comment 1 Adam Dingle 2011-03-12 17:57:47 UTC
Created attachment 183230 [details] [review]
patch
Comment 2 Matthias Clasen 2011-03-12 22:31:01 UTC
Thanks, good catch