Updates: load the right introspection file

Patch by Adam Dingle,
https://bugzilla.gnome.org/show_bug.cgi?id=644581